CoffeeParser.py
# Generated from ./Coffee.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CoffeeParser ( Parser ):

    grammarFileName = "Coffee.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'import'", 
                     "'void'", "'int'", "'float'", "'bool'", "'break'", 
                     "'continue'", "'return'", "'if'", "'else'", "'for'", 
                     "'in'", "'while'", "'true'", "'false'", "'+'", "'-'", 
                     "'/'", "'*'", "'='", "'!='", "'=='", "'<='", "'>='", 
                     "'<'", "'>'", "'&&'", "'||'", "'['", "']'", "'{'", 
                     "'}'", "'('", "')'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'?'", "'.'", "','", "':'", 
                     "';'", "'\"'", "'''", "'!'", "'%'" ]

    symbolicNames = [ "<INVALID>", "SINGLE_COMMENT", "MULTI_COMMENT", "IMPORT", 
                      "VOID", "INT", "FLOAT", "BOOLEAN", "BREAK", "CONTINUE", 
                      "RETURN", "IF", "ELSE", "FOR", "IN", "WHILE", "TRUE", 
                      "FALSE", "ADD", "SUB", "DIV", "MUL", "EQ", "NEQ", 
                      "DEQ", "LTEQ", "GTEQ", "LT", "GT", "AND", "OR", "LSQUARE", 
                      "RSQUARE", "LCURLY", "RCURLY", "LROUND", "RROUND", 
                      "ID", "INT_LIT", "FLOAT_LIT", "CHAR_LIT", "STRING_LIT", 
                      "QUEST", "DOT", "COMMA", "COLON", "SEMI", "DQUOTE", 
                      "SQUOTE", "NOT", "MOD", "WS" ]

    RULE_program = 0
    RULE_import_stmt = 1
    RULE_global_decl = 2
    RULE_var_decl = 3
    RULE_var_assign = 4
    RULE_var = 5
    RULE_data_type = 6
    RULE_method_decl = 7
    RULE_return_type = 8
    RULE_param = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_loop_var = 12
    RULE_method_call = 13
    RULE_expr = 14
    RULE_assign_op = 15
    RULE_literal = 16
    RULE_bool_lit = 17
    RULE_location = 18
    RULE_limit = 19
    RULE_low = 20
    RULE_high = 21
    RULE_step = 22

    ruleNames =  [ "program", "import_stmt", "global_decl", "var_decl", 
                   "var_assign", "var", "data_type", "method_decl", "return_type", 
                   "param", "block", "statement", "loop_var", "method_call", 
                   "expr", "assign_op", "literal", "bool_lit", "location", 
                   "limit", "low", "high", "step" ]

    EOF = Token.EOF
    SINGLE_COMMENT=1
    MULTI_COMMENT=2
    IMPORT=3
    VOID=4
    INT=5
    FLOAT=6
    BOOLEAN=7
    BREAK=8
    CONTINUE=9
    RETURN=10
    IF=11
    ELSE=12
    FOR=13
    IN=14
    WHILE=15
    TRUE=16
    FALSE=17
    ADD=18
    SUB=19
    DIV=20
    MUL=21
    EQ=22
    NEQ=23
    DEQ=24
    LTEQ=25
    GTEQ=26
    LT=27
    GT=28
    AND=29
    OR=30
    LSQUARE=31
    RSQUARE=32
    LCURLY=33
    RCURLY=34
    LROUND=35
    RROUND=36
    ID=37
    INT_LIT=38
    FLOAT_LIT=39
    CHAR_LIT=40
    STRING_LIT=41
    QUEST=42
    DOT=43
    COMMA=44
    COLON=45
    SEMI=46
    DQUOTE=47
    SQUOTE=48
    NOT=49
    MOD=50
    WS=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CoffeeParser.EOF, 0)

        def import_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoffeeParser.Import_stmtContext)
            else:
                return self.getTypedRuleContext(CoffeeParser.Import_stmtContext,i)


        def global_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoffeeParser.Global_declContext)
            else:
                return self.getTypedRuleContext(CoffeeParser.Global_declContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoffeeParser.Method_declContext)
            else:
                return self.getTypedRuleContext(CoffeeParser.Method_declContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoffeeParser.BlockContext)
            else:
                return self.getTypedRuleContext(CoffeeParser.BlockContext,i)


        def getRuleIndex(self):
            return CoffeeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CoffeeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CoffeeParser.IMPORT) | (1 << CoffeeParser.VOID) | (1 << CoffeeParser.INT) | (1 << CoffeeParser.FLOAT) | (1 << CoffeeParser.BOOLEAN) | (1 << CoffeeParser.BREAK) | (1 << CoffeeParser.CONTINUE) | (1 << CoffeeParser.RETURN) | (1 << CoffeeParser.IF) | (1 << CoffeeParser.FOR) | (1 << CoffeeParser.WHILE) | (1 << CoffeeParser.LCURLY) | (1 << CoffeeParser.ID) | (1 << CoffeeParser.SEMI))) != 0):
                self.state = 50
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 46
                    self.import_stmt()
                    pass

                elif la_ == 2:
                    self.state = 47
                    self.global_decl()
                    pass

                elif la_ == 3:
                    self.state = 48
                    self.method_decl()
                    pass

                elif la_ == 4:
                    self.state = 49
                    self.block()
                    pass


                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self.match(CoffeeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(CoffeeParser.IMPORT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CoffeeParser.ID)
            else:
                return self.getToken(CoffeeParser.ID, i)

        def SEMI(self):
            return self.getToken(CoffeeParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CoffeeParser.COMMA)
            else:
                return self.getToken(CoffeeParser.COMMA, i)

        def getRuleIndex(self):
            return CoffeeParser.RULE_import_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_stmt" ):
                listener.enterImport_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_stmt" ):
                listener.exitImport_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_stmt" ):
                return visitor.visitImport_stmt(self)
            else:
                return visitor.visitChildren(self)




    def import_stmt(self):

        localctx = CoffeeParser.Import_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(CoffeeParser.IMPORT)
            self.state = 58
            self.match(CoffeeParser.ID)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CoffeeParser.COMMA:
                self.state = 59
                self.match(CoffeeParser.COMMA)
                self.state = 60
                self.match(CoffeeParser.ID)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(CoffeeParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(CoffeeParser.Var_declContext,0)


        def getRuleIndex(self):
            return CoffeeParser.RULE_global_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_decl" ):
                listener.enterGlobal_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_decl" ):
                listener.exitGlobal_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_decl" ):
                return visitor.visitGlobal_decl(self)
            else:
                return visitor.visitChildren(self)




    def global_decl(self):

        localctx = CoffeeParser.Global_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_global_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.var_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(CoffeeParser.Data_typeContext,0)


        def var_assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoffeeParser.Var_assignContext)
            else:
                return self.getTypedRuleContext(CoffeeParser.Var_assignContext,i)


        def SEMI(self):
            return self.getToken(CoffeeParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CoffeeParser.COMMA)
            else:
                return self.getToken(CoffeeParser.COMMA, i)

        def getRuleIndex(self):
            return CoffeeParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = CoffeeParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.data_type()
            self.state = 71
            self.var_assign()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CoffeeParser.COMMA:
                self.state = 72
                self.match(CoffeeParser.COMMA)
                self.state = 73
                self.var_assign()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(CoffeeParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(CoffeeParser.VarContext,0)


        def EQ(self):
            return self.getToken(CoffeeParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(CoffeeParser.ExprContext,0)


        def getRuleIndex(self):
            return CoffeeParser.RULE_var_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_assign" ):
                listener.enterVar_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_assign" ):
                listener.exitVar_assign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_assign" ):
                return visitor.visitVar_assign(self)
            else:
                return visitor.visitChildren(self)




    def var_assign(self):

        localctx = CoffeeParser.Var_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.var()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CoffeeParser.EQ:
                self.state = 82
                self.match(CoffeeParser.EQ)
                self.state = 83
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CoffeeParser.ID, 0)

        def LSQUARE(self):
            return self.getToken(CoffeeParser.LSQUARE, 0)

        def INT_LIT(self):
            return self.getToken(CoffeeParser.INT_LIT, 0)

        def RSQUARE(self):
            return self.getToken(CoffeeParser.RSQUARE, 0)

        def getRuleIndex(self):
            return CoffeeParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = CoffeeParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(CoffeeParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(CoffeeParser.ID)
                self.state = 88
                self.match(CoffeeParser.LSQUARE)
                self.state = 89
                self.match(CoffeeParser.INT_LIT)
                self.state = 90
                self.match(CoffeeParser.RSQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CoffeeParser.INT, 0)

        def FLOAT(self):
            return self.getToken(CoffeeParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(CoffeeParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return CoffeeParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_type" ):
                return visitor.visitData_type(self)
            else:
                return visitor.visitChildren(self)




    def data_type(self):

        localctx = CoffeeParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_data_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CoffeeParser.INT) | (1 << CoffeeParser.FLOAT) | (1 << CoffeeParser.BOOLEAN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(CoffeeParser.Return_typeContext,0)


        def ID(self):
            return self.getToken(CoffeeParser.ID, 0)

        def LROUND(self):
            return self.getToken(CoffeeParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(CoffeeParser.RROUND, 0)

        def block(self):
            return self.getTypedRuleContext(CoffeeParser.BlockContext,0)


        def expr(self):
            return self.getTypedRuleContext(CoffeeParser.ExprContext,0)


        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoffeeParser.ParamContext)
            else:
                return self.getTypedRuleContext(CoffeeParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CoffeeParser.COMMA)
            else:
                return self.getToken(CoffeeParser.COMMA, i)

        def getRuleIndex(self):
            return CoffeeParser.RULE_method_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_decl" ):
                listener.enterMethod_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_decl" ):
                listener.exitMethod_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_decl" ):
                return visitor.visitMethod_decl(self)
            else:
                return visitor.visitChildren(self)




    def method_decl(self):

        localctx = CoffeeParser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.return_type()
            self.state = 96
            self.match(CoffeeParser.ID)
            self.state = 97
            self.match(CoffeeParser.LROUND)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CoffeeParser.INT) | (1 << CoffeeParser.FLOAT) | (1 << CoffeeParser.BOOLEAN))) != 0):
                self.state = 98
                self.param()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CoffeeParser.COMMA:
                    self.state = 99
                    self.match(CoffeeParser.COMMA)
                    self.state = 100
                    self.param()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 108
            self.match(CoffeeParser.RROUND)
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 109
                self.block()
                pass

            elif la_ == 2:
                self.state = 110
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(CoffeeParser.Data_typeContext,0)


        def VOID(self):
            return self.getToken(CoffeeParser.VOID, 0)

        def getRuleIndex(self):
            return CoffeeParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_type" ):
                return visitor.visitReturn_type(self)
            else:
                return visitor.visitChildren(self)




    def return_type(self):

        localctx = CoffeeParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_return_type)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CoffeeParser.INT, CoffeeParser.FLOAT, CoffeeParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.data_type()
                pass
            elif token in [CoffeeParser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(CoffeeParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(CoffeeParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(CoffeeParser.ID, 0)

        def getRuleIndex(self):
            return CoffeeParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = CoffeeParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.data_type()
            self.state = 118
            self.match(CoffeeParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(CoffeeParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(CoffeeParser.RCURLY, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoffeeParser.Var_declContext)
            else:
                return self.getTypedRuleContext(CoffeeParser.Var_declContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoffeeParser.BlockContext)
            else:
                return self.getTypedRuleContext(CoffeeParser.BlockContext,i)


        def statement(self):
            return self.getTypedRuleContext(CoffeeParser.StatementContext,0)


        def getRuleIndex(self):
            return CoffeeParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CoffeeParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CoffeeParser.LCURLY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(CoffeeParser.LCURLY)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CoffeeParser.INT) | (1 << CoffeeParser.FLOAT) | (1 << CoffeeParser.BOOLEAN) | (1 << CoffeeParser.BREAK) | (1 << CoffeeParser.CONTINUE) | (1 << CoffeeParser.RETURN) | (1 << CoffeeParser.IF) | (1 << CoffeeParser.FOR) | (1 << CoffeeParser.WHILE) | (1 << CoffeeParser.LCURLY) | (1 << CoffeeParser.ID) | (1 << CoffeeParser.SEMI))) != 0):
                    self.state = 123
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [CoffeeParser.INT, CoffeeParser.FLOAT, CoffeeParser.BOOLEAN]:
                        self.state = 121
                        self.var_decl()
                        pass
                    elif token in [CoffeeParser.BREAK, CoffeeParser.CONTINUE, CoffeeParser.RETURN, CoffeeParser.IF, CoffeeParser.FOR, CoffeeParser.WHILE, CoffeeParser.LCURLY, CoffeeParser.ID, CoffeeParser.SEMI]:
                        self.state = 122
                        self.block()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 127
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 128
                self.match(CoffeeParser.RCURLY)
                pass
            elif token in [CoffeeParser.BREAK, CoffeeParser.CONTINUE, CoffeeParser.RETURN, CoffeeParser.IF, CoffeeParser.FOR, CoffeeParser.WHILE, CoffeeParser.ID, CoffeeParser.SEMI]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CoffeeParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EvalContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoffeeParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def method_call(self):
            return self.getTypedRuleContext(CoffeeParser.Method_callContext,0)

        def SEMI(self):
            return self.getToken(CoffeeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEval" ):
                listener.enterEval(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEval" ):
                listener.exitEval(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEval" ):
                return visitor.visitEval(self)
            else:
                return visitor.visitChildren(self)


    class BreakContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoffeeParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BREAK(self):
            return self.getToken(CoffeeParser.BREAK, 0)
        def SEMI(self):
            return self.getToken(CoffeeParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak" ):
                listener.enterBreak(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak" ):
                listener.exitBreak(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak" ):
                return visitor.visitBreak(self)
            else:
                return visitor.visitChildren(self)

